cloud/w10/day-a/policies/constraints/require-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireResources
metadata:
  name: require-container-requests-limits
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["kube-system", "gatekeeper-system", "argocd", "monitoring", "external-secrets", "kyverno"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
